Implemented visual warnings in HTML to inform users that the application functions exclusively in the console

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>This game is runing in the console and the result will be in the console</p>
+    <p>I will later add a GUI when I learn how to manipulate the DOM with JS</p>
 </body>
 </html>
